--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -137,84 +137,85 @@
         </div>
       </div>
       <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutter">
+
+        <div class="Grid Grid--gutters Grid--cols-2">
+
           <div class="Grid-cell">
-            <div class="element">
-              <div class="accItem">
-                <div class="accTrigger">
+            <div class="accItem">
+              <div class="accTrigger">
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">My focus:</h4>
+                    <h5>Aligning the mobile app and partner tools with the company's shift to a gear-first rental model. I worked across core B2C and B2B flows to simplify UX, improve clarity, and support conversion.</h5>
 
-                  <h5>
-                    <span class="accIcon iconAccTrigger"></span>
-
-                    <span class="TextPoppins fontWeight400">My focus: </span>
-                    Aligning the mobile app and partner tools with the company's shift to a gear-first rental model. I worked across core B2C and B2B flows to simplify UX, improve clarity, and support conversion.
-                  </h5>
-                </div>
-                <div class="accContent">
-                  <div class="element">
-
-                    <ul class="listCircle ">
-                      <li>Before I joined, the team had redesigned the gear-first website in mid-2024. I supported final refinements and helped launch it in early 2025.
-                      </li>
-                      <li>
-                        The company will rebrand as GoQuip in 2025, expanding from baby gear only to general gear rental.
-                      </li>
-                    </ul>
                   </div>
                 </div>
 
 
               </div>
+              <div class="accContent" style="">
+                <div class="element">
 
-              <div class="spacingSmall"></div>
-
-              <div class="accItem">
-                <div class="accTrigger">
-
-                  <h5>
-                    <span class="accIcon iconAccTrigger"></span>
-
-                    <span class="TextPoppins fontWeight400">Impact: </span>
-                    Redesigned rental experience around a gear-first model — simplified entry points, streamlined shopping, and increased 7% mobile conversions.
-                  </h5>
-
+                  <ul class="listCircle ">
+                    <li>Before I joined, the team had redesigned the gear-first website in mid-2024. I supported final refinements and helped launch it in early 2025.
+                    </li>
+                    <li>
+                      The company will rebrand as GoQuip in 2025, expanding from baby gear only to general gear rental.
+                    </li>
+                  </ul>
                 </div>
-                <div class="accContent">
-                  <div class="element">
+              </div>
+            </div>
+          </div>
 
-                    <ul class="listCircle">
-                      <li>Rebuilt gear first flow overall in wireframe, test early, ensure everything works proper, saving time for later on back and force <span class="bulletWithArrow"></span>
-                      </li>
-                      <li>Rebuilt trip input flow with progressive disclosure (support quick edits or skips)
+          <div class="Grid-cell">
+            <div class="accItem">
+              <div class="accTrigger">
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">Impact:</h4>
+                    <h5> Redesigned rental experience around a gear-first model — simplified entry points, streamlined shopping, and increased 7% mobile conversions.
+                    </h5>
 
-                      </li>
-                      <li>
-                        Simplified category discovery to reduce time-to-cart
-
-
-
-                      </li>
-                      <li>Clear QP selection flow with upsells and fewer back buttons
-
-                      </li>
-                      <li>Collapsed checkout — removed survey, trust/insurance copy now clearer
-                      </li>
-
-                    </ul>
                   </div>
                 </div>
 
 
               </div>
+              <div class="accContent" style="">
+                <div class="element">
+
+                  <ul class="listCircle">
+                    <li>Rebuilt gear first flow overall in wireframe, test early, ensure everything works proper, saving time for later on back and force <span class="bulletWithArrow"></span>
+                    </li>
+                    <li>Rebuilt trip input flow with progressive disclosure (support quick edits or skips)
+
+                    </li>
+                    <li>
+                      Simplified category discovery to reduce time-to-cart
 
 
 
+                    </li>
+                    <li>Clear QP selection flow with upsells and fewer back buttons
+
+                    </li>
+                    <li>Collapsed checkout — removed survey, trust/insurance copy now clearer
+                    </li>
+
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+
+
       </div>
 
-
+<div class="blankHXS"></div>
 
 
 
@@ -269,13 +270,14 @@
 
 
           <div class="Grid-cell">
-            <div class="element accItem">
+            <div class="accItem">
               <div class="accTrigger">
                 <div class="row">
                   <div class="accIcon iconAccTrigger"></div>
                   <div>
                     <h4 class="fontWeight400">Full Rental Journey Wireframe</h4>
                     <h5>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</h5>
+
                   </div>
                 </div>
                 <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
