--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -215,7 +215,7 @@
 
       </div>
 
-<div class="blankHXS"></div>
+      <div class="blankHXS"></div>
 
 
 
@@ -280,7 +280,10 @@
 
                   </div>
                 </div>
-                <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                <div class="element">
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                </div>
+
 
               </div>
               <div class="accContent">
@@ -295,14 +298,22 @@
           </div>
 
 
+
           <div class="Grid-cell">
-            <div class="element accItem">
+            <div class="accItem">
               <div class="accTrigger">
-                <h4 class="fontWeight400">
-                  <span class="accIcon iconAccTrigger"></span>
-                  <span> Landing</span>
-                </h4>
-                <a href="mobile_landing/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">Landing</h4>
+                    <h5>x</h5>
+
+                  </div>
+                </div>
+                <div class="element">
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                </div>
+
 
               </div>
               <div class="accContent">
@@ -320,18 +331,26 @@
 
 
           <div class="Grid-cell">
-            <div class="element accItem">
+            <div class="accItem">
               <div class="accTrigger">
-                <h4 class="fontWeight400">
-                  <span class="accIcon iconAccTrigger"></span>
-                  <span> Trip Info</span>
-                </h4>
-                <a href="mobile_landing/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">Trip Info</h4>
+                    <h5>x</h5>
+
+                  </div>
+                </div>
+                <div class="element">
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                </div>
+
 
               </div>
               <div class="accContent">
                 <div class="element">
-                  <ul class="listCircle">
+
+                  <ul class="listCircle ">
                     <li><strong>Problem:</strong> The original trip flow asked users to enter all info up front (address, dates, time), and offered no flexibility later, leading to drop-off and user frustration.</li>
                     <li><strong>Insight:</strong> Most users accepted default time/date but wanted to adjust info after browsing gear availability.</li>
                     <li><strong>Solution:</strong> Kept address as a required input, auto-filled the rest, and made trip info editable at any point in the flow.</li>
@@ -342,14 +361,22 @@
           </div>
 
 
+
           <div class="Grid-cell">
-            <div class="element accItem">
+            <div class="accItem">
               <div class="accTrigger">
-                <h4 class="fontWeight400">
-                  <span class="accIcon iconAccTrigger"></span>
-                  <span> Shopping</span>
-                </h4>
-                <a href="mobile_landing/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">Shopping</h4>
+                    <h5>x</h5>
+
+                  </div>
+                </div>
+                <div class="element">
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                </div>
+
 
               </div>
               <div class="accContent">
@@ -365,14 +392,22 @@
           </div>
 
 
+
           <div class="Grid-cell">
-            <div class="element accItem">
+            <div class="accItem">
               <div class="accTrigger">
-                <h4 class="fontWeight400">
-                  <span class="accIcon iconAccTrigger"></span>
-                  <span> Cart & QP Selection</span>
-                </h4>
-                <a href="mobile_landing/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">Cart & QP Selection</h4>
+                    <h5>x</h5>
+
+                  </div>
+                </div>
+                <div class="element">
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                </div>
+
 
               </div>
               <div class="accContent">
@@ -388,13 +423,20 @@
           </div>
 
           <div class="Grid-cell">
-            <div class="accItem element borderRadiusS">
+            <div class="accItem">
               <div class="accTrigger">
-                <h4 class="fontWeight400">
-                  <span class="accIcon iconAccTrigger"></span>
-                  <span> Checkout</span>
-                </h4>
-                <a href="mobile_landing/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">Checkout</h4>
+                    <h5>x</h5>
+
+                  </div>
+                </div>
+                <div class="element">
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                </div>
+
 
               </div>
               <div class="accContent">
@@ -407,6 +449,8 @@
               </div>
             </div>
           </div>
+
+
 
 
 
@@ -461,17 +505,25 @@
       <div class="wrapper">
         <div class="Grid Grid--full Grid--gutter">
           <div class="Grid-cell">
-            <div class="accItem element borderRadiusS">
+            <div class="accItem">
               <div class="accTrigger">
-                <h4 class="fontWeight400">
-                  <span class="accIcon iconAccTrigger"></span>
-                  <span> Redesign Inventory Management</span>
-                </h4>
-                <a href="mobile_landing/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">Redesign Inventory Management</h4>
+                    <h5>Mapped and wireframed </h5>
+
+                  </div>
+                </div>
+                <div class="element">
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                </div>
+
 
               </div>
               <div class="accContent">
                 <div class="element">
+
                   <ul class="listCircle ">
                     <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
                   </ul>
@@ -531,45 +583,61 @@
         <div class="Grid Grid--full Grid--gutter">
 
           <div class="Grid-cell">
-            <div class="accItem element borderRadiusS">
+            <div class="accItem">
               <div class="accTrigger">
-                <h4 class="fontWeight400">
-                  <span class="accIcon iconAccTrigger"></span>
-                  <span> Filter Quick Fix</span>
-                </h4>
-                <a href="mobile_landing/"> <button class="buttonSmall buttonFlip WhiteBg">View Result</button></a>
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">Filter Quick Fix</h4>
+                    <h5>x</h5>
+
+                  </div>
+                </div>
+                <div class="element">
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Result</button></a>
+                </div>
+
 
               </div>
               <div class="accContent">
                 <div class="element">
+
                   <ul class="listCircle ">
-                    <li>x</li>
+                    <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
                   </ul>
                 </div>
               </div>
             </div>
           </div>
-
 
           <div class="Grid-cell">
-            <div class="accItem element borderRadiusS">
+            <div class="accItem">
               <div class="accTrigger">
-                <h4 class="fontWeight400">
-                  <span class="accIcon iconAccTrigger"></span>
-                  <span> Map Color Enhancement</span>
-                </h4>
-                <a href="mobile_landing/"> <button class="buttonSmall buttonFlip WhiteBg">View Result</button></a>
+                <div class="row">
+                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="fontWeight400">Map Color Enhancement</h4>
+                    <h5>x</h5>
+
+                  </div>
+                </div>
+                <div class="element">
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Result</button></a>
+                </div>
+
 
               </div>
               <div class="accContent">
                 <div class="element">
+
                   <ul class="listCircle ">
-                    <li>x</li>
+                    <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
                   </ul>
                 </div>
               </div>
             </div>
           </div>
+
 
 
 
