--- a/templates/shared/block_about.ejs
+++ b/templates/shared/block_about.ejs
@@ -30,7 +30,7 @@
   <div class="Grid Grid--full Grid--gutters u-textCenter">
     <div class="Grid-cell">
       <div class="element">
-        <h1 class="specialTextL"> About Me</h1>
+        <h1 class="specialTextL">About Me</h1>
         <div class="blankHTiny"></div>
 
         <h2 class="colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
@@ -47,7 +47,7 @@
 
     <div class="Grid-cell">
       <div class="element">
-        <img class="" src="me.png" alt="Vicky">
+        <img class="" src="/me.png" alt="Vicky">
 
       </div>
     </div>
