--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -59,14 +59,17 @@
     </a>
 
     <h1>Sections</h1>
+    <a href="section_chatGPT_050925/">
+      <h3 class="textUnderline">Practice with ChatGPT(5.8-Present.25)</h3>
+    </a>
     <a href="section_chatGPT_050825/">
-      <h3 class="textUnderline">Practice with ChatGPT(05.08.25)</h3>
+      <h3 class="textUnderline">Practice with ChatGPT(5.1-8.25)</h3>
     </a>
     <a href="section_chatGPT_043025/">
-      <h3 class="textUnderline">Practice with ChatGPT(04.30.25)</h3>
+      <h3 class="textUnderline">Practice with ChatGPT(4.30.25)</h3>
     </a>
     <a href="section_chatGPT_042825/">
-      <h3 class="textUnderline">Practice with ChatGPT(04.28.25)</h3>
+      <h3 class="textUnderline">Practice with ChatGPT(4.28.25)</h3>
     </a>
     <a href="section_two">
       <h3 class="textUnderline">Section 2</h3>
