--- a/templates/shared/block_timeline.ejs
+++ b/templates/shared/block_timeline.ejs
@@ -22,7 +22,7 @@
               <div class="uia-card__intro">
                 <h3 class="page__job-name fontWeight400">Senior UX Designer</h3>
                 <h6 class="TextPoppins textItalic">2024 – Present</h6>
-                <h6 class="TextPoppins textItalic">Full-time &#64; BabyQuip </h6>
+                <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; BabyQuip </h6>
                 <h4 class="fontWeight400 colorYellowVW700">Baby Gear Rental </h4>
 
                 <ul>
@@ -44,7 +44,7 @@
               <div class="uia-card__intro">
                 <h3 class="page__job-name fontWeight400">User Experience Designer</h3>
                 <h6 class="TextPoppins textItalic">2021 – 2024</h6>
-                <h6 class="TextPoppins textItalic">Full-time &#64; BookYourPet</h6>
+                <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; BookYourPet</h6>
 
                 <h4 class="fontWeight400 colorYellowVW700">Pet Booking Platform</h4>
                 <ul>
@@ -68,7 +68,7 @@
               <div class="uia-card__intro">
                 <h3 class="page__job-name fontWeight400">Product Designer</h3>
                 <h6 class="TextPoppins textItalic">2023 – 2024</h6>
-                <h6 class="TextPoppins textItalic">Part-time &#64; LASO Health</h6>
+                <h6 class="TextPoppins textItalic fontWeight400">Part-time &#64; LASO Health</h6>
                 <h4 class="fontWeight400 colorYellowVW700">Prescription Medication Sales Platform </h4>
                 <ul>
                   <li>&#9675; Marketing website: UX research for consumer messaging</li>
@@ -128,46 +128,23 @@
           <div class="uia-timeline__point uia-card">
             <div class="uia-card__container">
               <div class="uia-card__intro">
-                <h3 class="page__job-name fontWeight400">Web Design</h3>
-                <h5>&#9675; Responsive Web Design</h5>
+                <h3 class="page__job-name fontWeight400">Portfolio Site</h3>
+                <h6 class="TextPoppins textItalic">2020 - Present</h6>
+                <h5>&#9675; Built & maintained personal site using AWS S3, <a href="https://github.com/vicky-wyq" class="textUnderline"> HTML, CSS, JS, EJS </a>
+                </h5>
+                <h5>&#9675; Designed scalable components using responsive layout & design system logic</h5>
 
               </div>
             </div>
           </div>
         </div>
-        <div class="uia-timeline__group">
-          <div class="uia-timeline__dot"></div>
-          <div class="uia-timeline__point uia-card">
-            <div class="uia-card__container">
-              <div class="uia-card__intro">
-                <h3 class="page__job-name fontWeight400"><a href="/design_system/" class="textUnderline">Design System</a> </h3>
-                <h5>&#9675; Reusable & Scalable Components</h5>
 
-              </div>
-            </div>
-          </div>
-          <div class="blankHXXS"></div>
-
-        </div>
-        <div class="uia-timeline__group">
-          <div class="uia-timeline__dot"></div>
-          <div class="uia-timeline__point uia-card">
-            <div class="uia-card__container">
-              <div class="uia-card__intro">
-                <h3 class="page__job-name fontWeight400">Deployed on AWS S3</h3>
-                <h5>&#9675; Build from Scratch </h5>
-                <h5><a href="https://github.com/vicky-wyq" class="textUnderline">&#9675; HTML, CSS, JavaScript, EJS </a> </h5>
-
-              </div>
-            </div>
-          </div>
-          <div class="blankHXXS"></div>
-
-        </div>
       </div>
+
     </div>
   </div>
 </div>
+
 
 <div class="blankHXS"></div>
 
@@ -198,33 +175,10 @@
                 <h6 class="TextPoppins textItalic">2017 &#8211; 2018</h6>
                 <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; <a href="https://buro-os.com/" class="textUnderline">Buro OS</a></h6>
                 <h6>&#9675; Concept & Visual Design</h6>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="uia-timeline__group">
-          <div class="uia-timeline__dot"></div>
-          <div class="uia-timeline__point uia-card">
-            <div class="uia-card__container">
-              <div class="uia-card__intro">
-                <h3 class="page__job-name fontWeight400">Design Intern</h3>
-                <h6 class="TextPoppins textItalic">2017</h6>
-                <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; In Design Studio </h6>
-                <h6>&#9675; Building elevation, section, details documents
-                </h6>
-              </div>
-            </div>
-          </div>
-          <div class="blankHXXS"></div>
 
-        </div>
-        <div class="uia-timeline__group">
-          <div class="uia-timeline__dot"></div>
-          <div class="uia-timeline__point uia-card">
-            <div class="uia-card__container">
-              <div class="uia-card__intro">
-                <h3 class="page__job-name fontWeight400">Architectural Designer
-                </h3>
+
+                <div class="blankHTiny"></div>
+
                 <h6 class="TextPoppins textItalic">2013 &#8211; 2015</h6>
                 <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; <a href="http://www.pdidg.com/" class="textUnderline"> PDI Design Group </a> </h6>
                 <h6>&#9675; Schematic Design
@@ -232,26 +186,41 @@
               </div>
             </div>
           </div>
-          <div class="blankHXXS"></div>
-
         </div>
+
         <div class="uia-timeline__group">
           <div class="uia-timeline__dot"></div>
           <div class="uia-timeline__point uia-card">
             <div class="uia-card__container">
               <div class="uia-card__intro">
+
+
                 <h3 class="page__job-name fontWeight400">Design Intern
                 </h3>
+
+
+                <h6 class="TextPoppins textItalic">2017</h6>
+                <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; In Design Studio </h6>
+                <h6>&#9675; Building elevation, section, details documents
+                </h6>
+
+                <div class="blankHTiny"></div>
+
                 <h6 class="TextPoppins textItalic">2010 &#8211; 2012</h6>
                 <h6 class="TextPoppins textItalic fontWeight400">Part-time &#64; <a href="http://chengdapeng.art/" class="textUnderline"> Do Union </a></h6>
                 <h6>&#9675; Concept & Visualization
                 </h6>
+
+
+
+
               </div>
             </div>
           </div>
           <div class="blankHXXS"></div>
 
         </div>
+
 
       </div>
     </div>
@@ -285,10 +254,16 @@
           <div class="uia-timeline__point uia-card">
             <div class="uia-card__container">
               <div class="uia-card__intro">
-                <h3 class="page__job-name fontWeight400">Udemy</h3>
-                <h6 class="TextPoppins textItalic fontWeight400">2024, Online Class</h6>
-                <h6>The Complete <a href="/javascript-learning/" class="textUnderline">JavaScript Course</a> </h6>
-                <h6>From Zero to Expert </h6>
+                <h3 class="page__job-name fontWeight400">Professional Training & Certifications</h3>
+                <h6 class="TextPoppins textItalic fontWeight400">2021 – Present, Online</h6>
+                <h6>&#9675; Udemy: The Complete <a href="/javascript-learning/" class="textUnderline">JavaScript Course</a> Course (2024)
+                </h6>
+
+
+                <h6>&#9675; Codecademy: UX Research, UI/UX Design, JavaScript (2022–2023)</h6>
+
+                <h6>&#9675; Google UX Design Certificate (2021) </h6>
+
 
 
               </div>
@@ -297,42 +272,8 @@
           <div class="blankHXXS"></div>
 
         </div>
-        <div class="uia-timeline__group">
-          <div class="uia-timeline__dot"></div>
-          <div class="uia-timeline__point uia-card">
-            <div class="uia-card__container">
-              <div class="uia-card__intro">
-                <h3 class="page__job-name fontWeight400">Codecademy</h3>
-                <h6 class="TextPoppins textItalic fontWeight400">2022 &#8211; 2023, Online Class</h6>
-                <ul>
-                  <li>○ Learn User Research: Generative </li>
-                  <li>○ Learn Design Thinking: Ideation </li>
-                  <li>○ Learn Interaction Design </li>
-                  <li>○ Learn Introduction to UI and UX Design</li>
-                  <li>○ Learn Responsive Design </li>
-                  <li>○ Learn Navigation Design </li>
-                  <li>○ Learn JavaScript </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="blankHXXS"></div>
 
-        </div>
-        <div class="uia-timeline__group">
-          <div class="uia-timeline__dot"></div>
-          <div class="uia-timeline__point uia-card">
-            <div class="uia-card__container">
-              <div class="uia-card__intro">
-                <h3 class="page__job-name fontWeight400">Google UX Design Professional Certificate
-                </h3>
-                <h6 class="TextPoppins textItalic fontWeight400">2021, Online Class</h6>
-              </div>
-            </div>
-          </div>
-          <div class="blankHXXS"></div>
 
-        </div>
         <div class="uia-timeline__group">
           <div class="uia-timeline__dot"></div>
           <div class="uia-timeline__point uia-card">
@@ -344,21 +285,12 @@
                 <h6><a href="/architecture" class="textUnderline">Master of Architecture</a> </h6>
                 <h6>3-year program</h6>
 
+                <div class="blankHTiny"></div>
 
-              </div>
-            </div>
-          </div>
-          <div class="blankHXXS"></div>
-
-        </div>
-        <div class="uia-timeline__group">
-          <div class="uia-timeline__dot"></div>
-          <div class="uia-timeline__point uia-card">
-            <div class="uia-card__container">
-              <div class="uia-card__intro">
                 <h3 class="page__job-name fontWeight400">Beijing Uni. of Tech </h3>
                 <h6 class="TextPoppins textItalic fontWeight400">2009 - 2013, Full-time</h6>
                 <h6>Art & Design</h6>
+
               </div>
             </div>
           </div>
@@ -378,8 +310,7 @@
   <div class="Grid Grid--full Grid--gutters u-textCenter">
     <div class="Grid-cell">
       <div class="element">
-        <h1 class="TextPoppins fontWeight100 Grey800"> Leisure Activities
-        </h1>
+        <h1 class="TextPoppins fontWeight100 Grey800"> Visual Practice</h1>
 
       </div>
     </div>
@@ -400,32 +331,23 @@
               <div class="uia-card__intro">
                 <h3 class="page__job-name fontWeight400"><a href="/photography" class="textUnderline">Photography</a> </h3>
 
-                <h6 class="TextPoppins textItalic">2017 - Present, Part-time</h6>
+                <h6 class="TextPoppins textItalic fontWeight400">2017 - Present, Part-time</h6>
                 <h6>Nature & Wildlife</h6>
+                <div class="blankHTiny"></div>
 
-              </div>
-            </div>
-          </div>
-          <div class="blankHXXS"></div>
 
-        </div>
-        <div class="uia-timeline__group">
-          <div class="uia-timeline__dot"></div>
-          <div class="uia-timeline__point uia-card">
-            <div class="uia-card__container">
-              <div class="uia-card__intro">
                 <h3 class="page__job-name fontWeight400">Drawing & Painting
 
                 </h3>
                 <h6 class="TextPoppins textItalic">From childhood through college.
                 </h6>
-
               </div>
             </div>
           </div>
           <div class="blankHXXS"></div>
 
         </div>
+
 
       </div>
     </div>
