--- a/templates/shared/block_timeline.ejs
+++ b/templates/shared/block_timeline.ejs
@@ -47,12 +47,12 @@
                 <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; BookYourPet</h6>
 
                 <h4 class="fontWeight400 colorYellowVW700">Pet Booking Platform</h4>
-                <ul>
-                  <li>&#9675; B2B SaaS: pet service booking</li>
-                  <li>&#9675; B2C mobile: customer booking & payment</li>
-                  <li>&#9675; Admin dashboard: operations management</li>
+       
 
-                </ul>
+                <h5>&#9675; B2B SaaS: pet service booking</h5>
+                <h5>&#9675; B2C mobile: customer booking & payment</h5>
+                <h5>&#9675; Admin dashboard: operations management</h5>
+
 
 
               </div>
@@ -70,10 +70,9 @@
                 <h6 class="TextPoppins textItalic">2023 – 2024</h6>
                 <h6 class="TextPoppins textItalic fontWeight400">Part-time &#64; LASO Health</h6>
                 <h4 class="fontWeight400 colorYellowVW700">Prescription Medication Sales Platform </h4>
-                <ul>
-                  <li>&#9675; Marketing website: UX research for consumer messaging</li>
-                  <li>&#9675; Super Admin panel: user account management & permission control</li>
-                </ul>
+
+                <h5>&#9675; Marketing website: UX research for consumer messaging</h5>
+                <h5>&#9675; Super Admin panel: user account management & permission control</h5>
 
               </div>
             </div>
@@ -90,9 +89,8 @@
                 <h6 class="TextPoppins textItalic">2023</h6>
                 <h6 class="TextPoppins textItalic">Part-time &#64; Modernized Mobile LLC</h6>
                 <h4 class="fontWeight400 colorYellowVW700">Clean Spaces App</h4>
-                <ul>
-                  <li>&#9675; Tablet-based Admin Panel</li>
-                </ul>
+
+                <h5>&#9675; Tablet-based Admin Panel</h5>
               </div>
             </div>
           </div>
