--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -288,10 +288,7 @@
               </div>
               <div class="accContent">
                 <div class="element">
-
-                  <ul class="listCircle ">
-                    <li>Mapped and wireframed the entire rental flow to validate architecture and reduce downstream issues</li>
-                  </ul>
+                <h5 class="marginLeft"><strong>Solution:</strong>Designed and tested two landing paths: one direct to trip input, and one educational layout with visuals, categories, and explainer content.</h5>
                 </div>
               </div>
             </div>
@@ -319,11 +316,11 @@
               <div class="accContent">
                 <div class="element">
 
-                  <ul class="listCircle ">
-                    <li><strong>Problem:</strong> Mobile users needed a fast way to start booking, but also needed to understand how BabyQuip worked before committing.</li>
-                    <li><strong>Insight:</strong> Two user types emerged — those who wanted to search immediately and those who needed clarity before input.</li>
-                    <li><strong>Solution:</strong> Designed and tested two landing paths: one direct to trip input, and one educational layout with visuals, categories, and explainer content.</li>
-                  </ul>
+                  <h5 class="marginLeft"><strong>Problem:</strong> Mobile users needed a fast way to start booking, but also needed to understand how BabyQuip worked before committing</h5>
+                  <h5 class="marginLeft"><strong>Insight:</strong> Two user types emerged — those who wanted to search immediately and those who needed clarity before input.</h5>
+                  <h5 class="marginLeft"><strong>Solution:</strong>Designed and tested two landing paths: one direct to trip input, and one educational layout with visuals, categories, and explainer content.</h5>
+
+
                 </div>
               </div>
             </div>
