--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en" class="colorBgVW pattern1">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Vicky W. | UX Designer', 
-  description:'Specializing in crafting seamless user experiences for B2B SaaS and consumer applications, Vicky Wang transforms complexity into user-friendly solutions.', 
+  description:'Vicky Wang is a UX designer specializing in B2B SaaS and consumer platforms—crafting scalable, user-friendly solutions for complex workflows.', 
   pageURL:'', thumbnailImgURL: 'vickywang_photography.png'
   }) %>
 <!--Head-->
