--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -288,7 +288,7 @@
               </div>
               <div class="accContent">
                 <div class="element">
-                <h5 class="marginLeft"><strong>Solution:</strong>Designed and tested two landing paths: one direct to trip input, and one educational layout with visuals, categories, and explainer content.</h5>
+                  <h5 class="marginLeft"><strong>Solution:</strong>Designed and tested two landing paths: one direct to trip input, and one educational layout with visuals, categories, and explainer content.</h5>
                 </div>
               </div>
             </div>
@@ -300,10 +300,14 @@
             <div class="accItem">
               <div class="accTrigger">
                 <div class="row">
-                  <div class="accIcon iconAccTrigger"></div>
+                  <div>
+                    <h4 class="accIcon iconAccTrigger"></h4>
+
+
+                  </div>
                   <div>
                     <h4 class="fontWeight400">Landing</h4>
-                    <h5>x</h5>
+                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h5>
 
                   </div>
                 </div>
