--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -231,7 +231,7 @@
         </div>
 
 
-        <div class="Grid Grid--full Grid--gutter">
+        <div class="Grid Grid--full Grid--gutter displayLaptop">
           <div class="Grid-cell">
             <div class="element">
               <img src="cover_mobile_journey.svg" alt="">
@@ -281,7 +281,7 @@
                   </div>
                 </div>
                 <div class="element">
-                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg maxContent">View Case Study</button></a>
                 </div>
 
 
@@ -312,7 +312,7 @@
                   </div>
                 </div>
                 <div class="element">
-                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg maxContent">View Case Study</button></a>
                 </div>
 
 
@@ -343,7 +343,7 @@
                   </div>
                 </div>
                 <div class="element">
-                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg maxContent">View Case Study</button></a>
                 </div>
 
 
@@ -375,7 +375,7 @@
                   </div>
                 </div>
                 <div class="element">
-                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg maxContent">View Case Study</button></a>
                 </div>
 
 
@@ -406,7 +406,7 @@
                   </div>
                 </div>
                 <div class="element">
-                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg maxContent">View Case Study</button></a>
                 </div>
 
 
@@ -435,7 +435,7 @@
                   </div>
                 </div>
                 <div class="element">
-                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg maxContent">View Case Study</button></a>
                 </div>
 
 
@@ -517,7 +517,7 @@
                   </div>
                 </div>
                 <div class="element">
-                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg">View Case Study</button></a>
+                  <a href="mobile_wireframe/"> <button class="buttonSmall buttonFlip WhiteBg maxContent">View Case Study</button></a>
                 </div>
 
 
