--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -234,7 +234,7 @@
         <div class="Grid Grid--full Grid--gutter displayLaptop">
           <div class="Grid-cell">
             <div class="element">
-              <img src="cover_mobile_journey.svg" alt="">
+              <img class="modal-target" src="cover_mobile_journey.svg" alt="">
             </div>
           </div>
         </div>
@@ -469,10 +469,12 @@
           </div>
         </div>
 
-        <div class="Grid Grid--full Grid--gutter">
+
+
+        <div class="Grid Grid--full Grid--gutter displayLaptop">
           <div class="Grid-cell">
             <div class="element">
-              <img src="cover_inventory_management.png" alt="">
+              <img class="modal-target" src="cover_inventory_management.png" alt="">
             </div>
           </div>
         </div>
@@ -548,10 +550,10 @@
             </div>
           </div>
         </div>
-        <div class="Grid Grid--full Grid--gutter">
+        <div class="Grid Grid--full Grid--gutter displayLaptop">
           <div class="Grid-cell">
             <div class="element">
-              <img src="placeholder.png" alt="">
+              <img class="modal-target" src="placeholder.png" alt="">
             </div>
           </div>
         </div>
